[ Inicio ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,19 +1,30 @@
-<div class="animated fadeIn">
+<div id="notas" class="animated fadeIn">
 
   <h2>Bienvenido</h2>
-  <hr>
 
-  <span class="tarea-pendiente">Crear subítems dentro del navbar para las directivas</span>
+  <span class="tarea-pendiente">Pintar el favicon del color corporativo</span>
+  <span class="tarea-pendiente">Crear subítems dentro del navbar para las directivas y las rutas</span>
+  <span class="tarea-pendiente">Existe un componente llamado <i>directivas</i> fuera del directorio de componentes</span>
   <span class="tarea-pendiente">Unificar los componentes de directivas en uno solo y diferenciar el contenido de cada uno con subapartados</span>
   <span class="tarea-pendiente">Al hacer clic en un subítem de las directivas dentro del sidebar, que te mueva el scroll al apartado correspondiente</span>
 
-  <p>
-    Esta web tiene como objetivo ilustrar el funcionamiento de Angular de forma sencilla, breve y directa.
-  </p>
+  <h3>Propósito</h3>
+  <hr>
 
-  <p>Creo que no es posible utilizar [routerLink] para una URL externa a la app (probar a ver si es vdd...)</p>
+  <ul>
+    <li>Esta web tiene como objetivo ilustrar el funcionamiento de Angular de forma sencilla, breve y directa</li>
+    <li>Me he formado en el funcionamiento de este framework durante un largo periodo de tiempo y he creado estas notas por si le pudieran servir a alguien basándome en diferente fuentes</li>
+  </ul>
 
-  <p>Un archivo .map es un fichero intermedio que establece un mapping entre un lenguaje de progamación y otro. Lo encontramos, por ejemplo, con SASS, dado que no se compila directamente de SASS a CSS, sino que primero se utiliza una compilación o traducción intermediaria utilizando un fichero .map</p>
-  <p>Pues lo mismo pasa con TS y JS cuando vamos a publicar nuestra app de Angular. Esta se pasa de TS a JS, pero no de forma inmediata, sino usando ficheros .map también</p>
+  <h3>Introducción</h3>
+  <hr>
+
+  <ul>
+    <li>Angular es un framework de front desarrollado por Google que utiliza TypeScript</li>
+    <li>Un framework es un conjunto de herramientas software que quedan a disposición del programador para elaborar aplicaciones web contando con un gran abanico de prestaciones que no tendrías a tu disposición programando desde cero</li>
+    <li>TypeScript es un lenguaje de programación desarrollado por Microsoft que utiliza JavaScript como base crear un lenguaje de programación más robusto</li>
+    <li>Ofrece numerosas prestaciones adicionales con las que JavaScript no contaba en principio, por lo que se conoce como un superconjunto de JavaScript</li>
+    <li>Algunas de dichas prestaciones vienen a ser el tipado de variables, notificación de errores previa al periodo de ejecución, etc.</li>
+  </ul>
 
 </div>
