[ Navbar ] » Contenido actualizado

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -7,6 +7,12 @@
         Inicio
       </a>
     </li>
+    <li routerLinkActive="active">
+      <a routerLink="typescript">      
+        <i class="icon fa fa-fw fa-gear" aria-hidden="true"></i>
+        TypeScript
+      </a>
+    </li>
     <li routerLinkActive="active" (click)="abrirSubmenu('directivas')">
       <a routerLink="ngstyle">
         <i class="icon fa fa-fw fa-lightbulb-o" aria-hidden="true"></i>
