--- a/src/app/componentes/rutas/rutas.component.html
+++ b/src/app/componentes/rutas/rutas.component.html
@@ -3,6 +3,7 @@
   <h2>Rutas</h2>
 
   <span class="tarea-pendiente">Rutas absolutas y rutas relativas en el atributo <b>routerLink</b></span>
+  <span class="tarea-pendiente">Hacer una pequeña introducción para explicar el esquema general de las explicaciones</span>
 
   <h3>1. Fichero de rutas</h3>
   <hr>
