[ General ] » Nombre del proyecto actualizado

--- a/src/app/componentes/directivas/ng-class/ng-class.component.html
+++ b/src/app/componentes/directivas/ng-class/ng-class.component.html
@@ -20,7 +20,7 @@
 
   <hr>
 
-  <h3 [ngClass]="{ 'text-danger': true }">
+  <!-- <h3 [ngClass]="{ 'text-danger': true }">
     Hola, mundo
   </h3>
 
@@ -34,7 +34,7 @@
 
   <button [ngClass]="{'btn-danger': propiedades.danger, 'btn-info': !propiedades.danger}"
   (click)="propiedades.danger = !propiedades.danger"
-  type="button" name="button" class="btn">Cambiar</button>
+  type="button" name="button" class="btn">Cambiar</button> -->
 
   <hr>
 
