--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,16 @@ p {
     margin: 0 0 25px;
 }
 
+a {
+    color: rgb(70,210,95);
+    text-decoration: none !important;
+    transition: .25s ease-in-out;
+
+    &:hover {
+        color: rgba(70,210,95,.75);
+    }
+}
+
 u {
     text-decoration: none;
     border-bottom: 1px solid $lightprimary;
