[ Rutas ] » Contenido actualizado

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -19,6 +19,12 @@
         Componentes
       </a>
     </li>
+    <li routerLinkActive="active" (click)="abrirSubmenu()">
+      <a routerLink="servicios">      
+        <i class="icon fa fa-fw fa-paper-plane" aria-hidden="true"></i>
+        Servicios
+      </a>
+    </li>
     <li routerLinkActive="active" (click)="abrirSubmenu('directivas')">
       <a routerLink="ngstyle">
         <i class="icon fa fa-fw fa-lightbulb-o" aria-hidden="true"></i>
