--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -62,6 +62,12 @@
       </a>
     </li>
     <li routerLinkActive="active" (click)="abrirSubmenu()">
+      <a routerLink="auth">
+        <i class="icon fa fa-fw fa-lock" aria-hidden="true"></i>
+        Auth0
+      </a>
+    </li>
+    <li routerLinkActive="active" (click)="abrirSubmenu()">
       <a routerLink="despliegue">
         <i class="icon fa fa-fw fa-star-o" aria-hidden="true"></i>
         Despliegue
