--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,16 +42,6 @@ p {
     margin: 0 0 25px;
 }
 
-a {
-    color: rgb(70,210,95);
-    text-decoration: none !important;
-    transition: .25s ease-in-out;
-
-    &:hover {
-        color: rgba(70,210,95,.75);
-    }
-}
-
 u {
     text-decoration: none;
     border-bottom: 1px solid $lightprimary;
@@ -78,6 +68,17 @@ hr {
 // ───────────── //
 
 #notas {
+
+    a {
+        color: rgb(0,130,255);
+        text-decoration: none !important;
+        border-bottom: 1px solid rgba(0,130,255,.5);
+        transition: .25s ease-in-out;
+    
+        &:hover {
+            color: rgba(0,130,255,.75);
+        }
+    }
 
     ul {
         list-style: none;
