[ Menú ] » Bug solucionado [ Inicio ] » Nuevas tareas

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -3,6 +3,8 @@
   <h2>Bienvenido</h2>
 
   <span class="tarea-pendiente">Pintar el favicon del color corporativo</span>
+  <span class="tarea-pendiente">Explicar en esta sección cómo meterle jQuery</span>
+  <span class="tarea-pendiente">Permitir ocultar el menú</span>
   <span class="tarea-pendiente">Crear subítems dentro del navbar para las directivas y las rutas</span>
   <span class="tarea-pendiente">Existe un componente llamado <i>directivas</i> fuera del directorio de componentes</span>
   <span class="tarea-pendiente">Unificar los componentes de directivas en uno solo y diferenciar el contenido de cada uno con subapartados</span>
