--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,25 +1,25 @@
 <div id="sidebar">
   <img class="logo" src="assets/logo1.svg" alt="">
   <ul>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="inicio">      
         <i class="icon fa fa-fw fa-home" aria-hidden="true"></i>
         Inicio
       </a>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="typescript">      
         <i class="icon fa fa-fw fa-gear" aria-hidden="true"></i>
         TypeScript
       </a>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="componentes">      
         <i class="icon fa fa-fw fa-puzzle-piece" aria-hidden="true"></i>
         Componentes
       </a>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="servicios">      
         <i class="icon fa fa-fw fa-paper-plane" aria-hidden="true"></i>
         Servicios
@@ -37,7 +37,7 @@
         <li>Item</li>
       </ul>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="pipes">
         <i class="icon fa fa-fw fa-wrench" aria-hidden="true"></i>
         Pipes
@@ -55,19 +55,19 @@
         <li>Item</li>
       </ul>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="ciclos-de-vida">
         <i class="icon fa fa-fw fa-leaf" aria-hidden="true"></i>
         Ciclos de vida
       </a>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="auth">
         <i class="icon fa fa-fw fa-lock" aria-hidden="true"></i>
         Auth0
       </a>
     </li>
-    <li routerLinkActive="active" (click)="abrirSubmenu()">
+    <li routerLinkActive="active" (click)="abrirSubmenu('')">
       <a routerLink="despliegue">
         <i class="icon fa fa-fw fa-star-o" aria-hidden="true"></i>
         Despliegue
