[ Inicio ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -29,4 +29,12 @@
     <li>Algunas de dichas prestaciones vienen a ser el tipado de variables, notificación de errores previa al periodo de ejecución, etc.</li>
   </ul>
 
+  <h3>jQuery</h3>
+  <hr>
+
+  <ul>
+    <li>Desde el directorio de nuestro proyecto ejecutamos el comando <b>& npm install jquery</b></li>
+    <li>Tras esto, ejecutamos el comando <b>$ npm install</b> o solamente <b>$ npm i</b> para actualizar las dependencias</li>
+  </ul>
+
 </div>
